--- a/manager/templates/capiporter.html
+++ b/manager/templates/capiporter.html
@@ -3,8 +3,8 @@
 {% block title %}Coluna do Capivara{% endblock %} 
 
 {%block content %}
-<div class="row p-3 m-5">
-  <div class="card col-lg-5 m-3">
+<div class="row  my-5">
+  <div class="card col-lg-5 mx-auto">
     <h1 class="text-center">East</h1>
     <div class="card">
         <h3 class="card-title p-2 text-center">Atlantic Division</h3>        
@@ -109,7 +109,7 @@
         </div>  
     </div>
   </div>
-  <div class="card col-lg-5 m-3">
+  <div class="card col-lg-5 mx-auto m-1">
     <h1 class="text-center">West</h1>
     <div class="card">
         <h3 class="card-title p-2 text-center">Midwest Division</h3>        
